cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-demo-1
spec:
  containers:
  - name: debug
    image: rkalluru/debug
