rbac2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rbac-demo1
spec:
  serviceAccountName: example
  containers:
  - name: debug
    image: rkalluru/debug
