resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-resources
spec:
  containers:
  - name: app
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "0.5m"
