networkpolicy.yaml
## Without Network Policy
apiVersion: v1
kind: Pod
metadata:
  name: nginx-13-np
  labels:
    podName: nginx-13-np
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-13-np
spec:
  selector:
    podName: nginx-13-np
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-13-np
  labels:
    podName: debug-13-np
spec:
  containers:
  - name: debug
    image: rkalluru/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: debug1-13-np
  labels:
    podName: debug1-13-np
spec:
  containers:
  - name: debug
    image: rkalluru/debug    
# Example: Restrict everything
---
#  apiVersion: networking.k8s.io/v1
#  kind: NetworkPolicy
#  metadata:
#    name: default-deny-ingress
#  spec:
#    podSelector: {}
#    policyTypes:
#    - Ingress   

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      appName: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          podName: debug1-13-np
    ports:
    - protocol: TCP
      port: 80
