networkpolicy3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-14-np
  labels:
    podName: nginx-13-np
    appName: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.19
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-14-np
  labels:
    podName: nginx-14-np
    appName: nginx14
spec:
  containers:
  - name: nginx14
    image: nginx:1.15
    ports:
    - containerPort: 80    

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  spec:
    podSelector: {}
    policyTypes:
    - Ingress
